add gift and category endpoint
